--- a/challenges/overflowing-buckets/Dockerfile
+++ b/challenges/overflowing-buckets/Dockerfile
@@ -1,6 +1,6 @@
 FROM ubuntu:18.04
 RUN dpkg --add-architecture i386
-RUN apt-get update 
+RUN apt-get update
 RUN apt-get install -y libc6:i386
 RUN apt-get install -y nmap
 
@@ -8,6 +8,6 @@ RUN adduser player
 COPY * /
 WORKDIR /
 
-EXPOSE 2525
+EXPOSE 2500
 USER player
-CMD ncat -l -k -p 2525 -e fs
+CMD ncat -l -k -p 2500 -e bo
